# blood-pressure

./: .gitignore  Python notebook per illustrare le misurazioni casalinghe della pressione arteriosa.docx  Untitled.ipynb  blood-pressure-newlogs.ipynb  blood-pressure.ipynb  bp.py  bplogs_analyze.ipynb  build_dataframe.ipynb  jupyter README.rtf  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  blood-pressure-checkpoint.ipynb  blood-pressure-newlogs-checkpoint.ipynb  bloodpressure-checkpoint.ipynb  bplogs_analyze-checkpoint.ipynb  convert_oldlog_to_newformat-checkpoint.ipynb
accessory/: convert_oldlog_to_newformat.ipynb  datetime_validate.ipynb
data/: .bp_log.csv.swp  Your Requested OMRON Report from 25 December 2021 to 28 June 2022.csv  Your Requested OMRON Report from 27 December 2021 to 30 June 2022.csv  Your Requested OMRON Report from 28 December 2021 to 1 July 2022.csv  [BP-Logbook]20210507-20210914_NEWFORMAT.csv  addnewreadings.py  bp_log.csv  new.csv  new_bp_log.csv
data/.ipynb_checkpoints/: [BP-Logbook]20210507-20210914-checkpoint.csv  bp_log-checkpoint.csv
data/Users/bob/Documents/programming/bloodpressure/: blood-pressure.ipynb
environment/: environment.yml  environment_full.yml
